--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "license": "MIT",
     "dependencies": {
         "@hono/node-server": "^1.13.0",
-        "@prisma/client": "^6.7.0",
-        "hono": "^4.6.0"
+        "@prisma/adapter-pg": "^7.2.0",
+        "hono": "^4.6.0",
+        "pg": "^8.13.0"
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
-        "prisma": "^6.7.0",
+        "@types/pg": "^8.11.0",
+        "prisma": "^7.2.0",
         "tsx": "^4.19.0",
         "typescript": "^5.7.0"
     }
